--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <li>Database Management (A)</li>
                 </ol>
             </li>
-            <li><h4>12th Secondary Education (96%) , Pinewood School, SRE</h4></li>
-            <p>2022 - 2020</p>
-            <li><h4>10th Primary Education (95.6%) , Pinewood School, SRE</h4></li>
-            <p>2020 - 2018</p>
+            <li><h4>12th Secondary Education (96%)</h4></li>
+            <p>2022 - 2020 Pinewood School, SRE</p>
+            <li><h4>10th Primary Education (95.6%)</h4></li>
+            <p>2020 - 2008 Pinewood School, SRE</p>
         </ul>
         <hr>
         <h2><u>Work Experience</u></h2>
